Add more notes warning about using record shapes.

--- a/doc/infosrc/shapes.1
+++ b/doc/infosrc/shapes.1
@@ -17,7 +17,7 @@ There are three main types of shapes :
 The record-based shape has largely been superseded and greatly generalized
 by <A HREF=shapes.html#html>HTML-like labels</A>. 
 That is, instead of using <TT>shape=record</TT>, one might
-consider using <TT>shape=none</TT> and an HTML-like label.
+consider using <TT>shape=none</TT>, <TT>margin=0</TT> and an HTML-like label.
 <P>
 The geometry and style of all node shapes are affected by
 the node attributes 
