--- a/doc/infosrc/shapes.2
+++ b/doc/infosrc/shapes.2
@@ -78,6 +78,11 @@ The synthetic biology shapes:
 were contributed by Jenny Cheng.
 
 <H2><A NAME=record>Record-based Nodes</A></H2>
+<B>NOTE:</B> Please see the note about record-based nodes at the
+<A HREF=#top>top</A> of this page. Also note that there are problems using 
+non-trivial edges (edges with ports or labels) between adjacent
+nodes on the same rank if one or both nodes has a record shape.
+<P>
 These are specified by shape values of "record" and "Mrecord".
 The structure of a record-based node is determined by 
 its <A HREF=attrs.html#d:label><TT>label</TT></A>,
