Update Yifan's email

--- a/cmd/dot/dot.1
+++ b/cmd/dot/dot.1
@@ -646,11 +646,11 @@ and weights can cause instability.
 .SH AUTHORS
 Stephen C. North <north@research.att.com>
 .br
-Emden R. Gansner <erg@research.att.com>
+Emden R. Gansner <erg@graphviz.org>
 .br
 John C. Ellson <ellson@research.att.com>
 .br
-Yifan Hu <yifanhu@research.att.com>
+Yifan Hu <yifanhu@yahoo.com>
 .PP
 The bitmap driver (PNG, GIF etc) is by Thomas Boutell, <http://www.boutell.com/gd>
 .PP
