--- a/cmd/dot/patchwork.1
+++ b/cmd/dot/patchwork.1
@@ -432,9 +432,9 @@ it would be good if some cluster label could be displayed.
 .P
 Patchwork has no mechanism for fitting labels within the supplied box.
 .SH AUTHORS
-Emden R. Gansner <erg@research.att.com>
+Emden R. Gansner <erg@graphviz.org>
 .br
-Yifan Hu <yifanhu@research.att.com>
+Yifan Hu <yifanhu@yahoo.com>
 .SH "SEE ALSO"
 This man page contains only a small amount of the information related
 to the Graphviz layout programs. The most complete information can be
