--- a/cmd/edgepaint/edgepaint.1
+++ b/cmd/edgepaint/edgepaint.1
@@ -55,7 +55,7 @@ At present, \fBedgepaint\fP does not handle graphs with loops or directed multie
 \fIa -> b\fP and \fIb -> a\fP is acceptable, but not if it has edges \fIa -> b\fP and \fIa -> b\fP or
 \fIa -- b\fP and \fIa -- b\fP.
 .SH AUTHOR
-Yifan Hu <yifanhu@research.att.com>
+Yifan Hu <yifanhu@yahoo.com>
 .SH "SEE ALSO"
 .PP
 gvmap(1), sfdp(1), neato (1), dot(1)
