--- a/cmd/gvmap/gvmap.1
+++ b/cmd/gvmap/gvmap.1
@@ -156,7 +156,7 @@ gvmap.sh -Ae -Ecolor=#55555522 -Tpng foo.gv > foo.png
 
 
 .SH AUTHOR
-Yifan Hu <yifanhu@research.att.com>
+Yifan Hu <yifanhu@yahoo.com>
 .SH "SEE ALSO"
 .PP
 gvmap.sh(1), sfdp(1), neato(1), gvpr(1)
