--- a/cmd/mingle/mingle.1
+++ b/cmd/mingle/mingle.1
@@ -84,8 +84,8 @@ At present, \fBmingle\fP does not handle graphs with loops or directed multiedge
 \fIa -> b\fP and \fIb -> a\fP is acceptable, but not if it has edges \fIa -> b\fP and \fIa -> b\fP or
 \fIa -- b\fP and \fIa -- b\fP.
 .SH AUTHOR
-Emden R. Gansner <erg@research.att.com>
-Yifan Hu <yifanhu@research.att.com>
+Emden R. Gansner <erg@graphviz.org>,
+Yifan Hu <yifanhu@yahoo.com>
 .SH "SEE ALSO"
 .PP
 sfdp(1), neato(1), gvpr(1)
