--- a/cmd/tools/mm2gv.1
+++ b/cmd/tools/mm2gv.1
@@ -84,8 +84,8 @@ Return \fB0\fP
 if there were no problems during conversion;
 and non-zero if any error occurred.
 .SH AUTHORS
-Yifan Hu <yifanhu@research.att.com>
+Yifan Hu <yifanhu@yahoo.com>
 .br
-Emden R. Gansner <erg@research.att.com>
+Emden R. Gansner <erg@graphviz.com>
 .SH ADDITIONAL INFO
 See http://math.nist.gov/MatrixMarket/ for description of the format and http://www.cise.ufl.edu/research/sparse/matrices/ for a large collection of sparse matrices in this format.
