add icurve arrow shape

--- a/doc/infosrc/arrows.2
+++ b/doc/infosrc/arrows.2
@@ -8,13 +8,18 @@ The primitive shapes are:
     <TD>"crow"<TD><IMG SRC="a_crow.gif">
     <TD>"curve"<TD><IMG SRC="a_curve.gif">
     <TD>"diamond"<TD><IMG SRC="a_diamond.gif">
+  </TR>
+  <TR>
+  </TR>
+  <TR>
     <TD>"dot"<TD><IMG SRC="a_dot.gif">
-  </TR>
-  <TR>
-  </TR>
-  <TR>
+    <TD>"icurve"<TD><IMG SRC="a_icurve.gif">
     <TD>"inv"<TD><IMG SRC="a_inv.gif">
     <TD>"none"<TD><IMG SRC="a_none.gif">
+  </TR>
+  <TR>
+  </TR>
+  <TR>
     <TD>"normal"<TD><IMG SRC="a_normal.gif">
     <TD>"tee"<TD><IMG SRC="a_tee.gif">
     <TD>"vee"<TD><IMG SRC="a_open.gif">
@@ -58,6 +63,7 @@ The following table indicates which modifiers are allowed with which shapes.
  <TH>curve
  <TH>diamond
  <TH>dot
+ <TH>icurve
  <TH>inv
  <TH>none
  <TH>normal
@@ -69,13 +75,13 @@ The following table indicates which modifiers are allowed with which shapes.
 </TABLE>
 </CENTER>
 <P>
-This yields 39 different arrow shapes. The optional second, third, fourth shapes
-can independently be any of the 39, except the last cannot be <TT>none</TT> as
+This yields 42 different arrow shapes. The optional second, third, fourth shapes
+can independently be any of the 42, except the last cannot be <TT>none</TT> as
 this would create a redundant shape.
-Thus, there are 38 &middot; 39<sup>3</sup> + 38 &middot; 39<sup>2</sup> + 38 &middot; 39 + 39 = 2,313,441 different combinations.
+Thus, there are 41 &middot; 42<sup>3</sup> + 41 &middot; 42<sup>2</sup> + 41 &middot; 42 + 42 = 3,111,696 different combinations.
 
 <P>
-The following display contains the 39 combinations possible with a single
+The following display contains the 42 combinations possible with a single
 arrow shape. The node attached to the arrow is not drawn but would appear
 on the right side of the edge.
 <P>
