--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+August 12, 2014
+	- Add icurve arrowhead.
 April 13, 2014
 	- Release 2.38.0
 	- Resolves bugs: 2409, 2413, 2417, 2420, 2422, 2423, 2425
