--- a/doc/infosrc/lang.2
+++ b/doc/infosrc/lang.2
@@ -36,10 +36,7 @@ The language supports C++-style comments: <TT>/* */</TT> and <TT>//</TT>.
 In addition, a line beginning with a '#' character is considered a line
 output from a C preprocessor (e.g., #  34 to indicate line 34 ) and discarded.
 <P>
-Semicolons aid readability but are not required except in the rare case
-that a named subgraph with no body immediately preceeds an anonymous
-subgraph, since the precedence rules cause this sequence to be parsed as
-a subgraph with a heading and a body.
+Semicolons and commas aid readability but are not required.
 Also, any amount of whitespace may be inserted between terminals.
 <P>
 As another aid for readability, dot allows double-quoted strings to
