--- a/doc/infosrc/shapes.2
+++ b/doc/infosrc/shapes.2
@@ -1,6 +1,9 @@
 </TABLE>
 As the figures suggest, the shapes <TT>rect</TT> and <TT>rectangle</TT> are synonyms for <TT>box</TT>, and <TT>none</TT> is a synonym for <TT>plaintext</TT>.
-Also, unlike the rest, we have shown these last two 
+The shape <TT>plain</TT> is similar to these two, except that it also enforces 
+<TT>width=0 height=0 margin=0</TT>, which guarantees that the actual size of the node is entirely determined by the label.
+This is useful, for example, when using <A HREF=shapes.html#html>HTML-like labels</A>.
+Also, unlike the rest, we have shown these three, as well as <TT>underline</TT>,
 without <TT>style=filled</TT>
 to indicate the normal use. If fill were turned on, the label text would
 appear in a filled rectangle.
