Note constraint on index type of array used for split and tokens function.

--- a/cmd/gvpr/gvpr.1
+++ b/cmd/gvpr/gvpr.1
@@ -738,8 +738,8 @@ The separator characters are those given in the \fIseps\fP argument.
 If \fIseps\fP is not provided, the default value is " \\t\\n". 
 The functions return the number of fields or tokens.
 .sp
-The fields and tokens are stored in the argument array. The array must be \fBstring\fP-valued and,
-if an index type is specified, it must be \fBint\fP. The entries are indexed by consecutive
+The fields and tokens are stored in the argument array. The array must be \fBstring\fP-valued and
+have \fBint\fP as its index type. The entries are indexed by consecutive
 integers, starting at 0. Any values already stored in the array will be either overwritten, or
 still be present after the function returns.
 .SS "I/O"
