update my email address in AUTHORS (mostly testing if I can push from this host)

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,7 +4,7 @@ Primary contact. Please send patches or enhancements to:
 ---------------
 Primary Authors: (In alphabetical order.)
 
-    John Ellson  <ellson@graphviz.org>
+    John Ellson  <john.ellson@comcast.net>
     Emden Gansner <erg@research.att.com>
     Yifan Hu <yifanhu@research.att.com>
     Stephen North <north@research.att.com>
