--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 February 13, 2016
 	- Add cylinder shape for databases.
+	- Free installed plugins
 September 9, 2014
 	- Add plain shape for use with HTML-like labels.
 August 12, 2014
