Remove usage of ast_common.h
Now that ast_common.h is never included anymore, the files
`ast_common.h.in`, `windows/include/ast_common.h` and all
`features/common` can be removed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+December 21, 2016
+	- Remove usage of ast_common.h
 December 20, 2016
     - Release 2.40.0
         - network-simplex fixes and optimization (Stephen North)
